# minifixwood

./: .bundleignore  .dockerignore  .gitignore  README.md  __PATCH_SNAPSHOT__.txt  _tab_desktop.cmd  _tab_docker.cmd  _tab_helper.cmd  _tab_web.cmd  dev-up-tabs.ps1  docker-compose.yml  login.json  minifixwood.bundle  reset_pw.py  workshop-cloud.bundle
.github/workflows/: desktop-windows.yml
apps/desktop/: README.md  package-lock.json  package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: api.rs  cache.rs  main.rs
apps/web/: .dockerignore  Dockerfile  next.config.js  package-lock.json  package.json  tsconfig.json
apps/web/src/app/: layout.tsx  page.tsx
apps/web/src/components/: AppShell.tsx  Sidebar.tsx  icons.tsx
apps/web/src/lib/: api.ts
scripts/: bundle_now.sh  dev-reset.ps1
services/api/: .dockerignore  Dockerfile  requirements.txt
services/api/app/: db.py  deps.py  main.py  models.py  models.py.bak.2026-01-20-124523  queue.py  s3.py  schemas.py  schemas.py.bak.2026-01-20-113654
services/api/app/core/: config.py  security.py
services/api/app/routers/: _audit.py  admin.py  auth.py  (+8 more)
services/api/migrations/: 001_init.sql  002_inventory.sql  003_hr.sql  004_user_employee_link.sql  005_payroll_breakdown.sql  006_payroll_components.sql  007_employee_default_bonus.sql  008_attendance.sql  009_salary_payments.sql  010_users_role_site_supervisor.sql
services/scripts/: apply_migrations.sh
services/worker/: .dockerignore  Dockerfile  Dockerfile.dockerfile  requirements.txt  worker.py
tools/: open_helper.py
(+32 files in other folders)
