[package]
name = "workshop_desktop"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
directories = "5"
uuid = { version = "1", features = ["v4", "serde"] }
anyhow = "1"
open = "5"
sha2 = "0.10"
hex = "0.4"
